<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bookkeeperke.android.BusinessProfile">

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/scan_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_profile"
        android:orderInCategory="100"
        android:title="@string/update_business_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_location"
        android:orderInCategory="100"
        android:title="@string/update_business_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_employees"
        android:orderInCategory="100"
        android:title="@string/employees"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_business"
        app:showAsAction="never" />

</menu>
