<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_8"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="@dimen/padding_8"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:transitionName="userImageTransition"
            android:src="@drawable/cover"
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/content_description" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:padding="@dimen/padding_10"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/cardView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/the_cotton_industry_development_bill_senate_bills_no_55_of_2021"
            android:maxLines="2"
            android:textColor="@color/feminineEight"
            android:fontFamily="@font/open_sans_regular"
            android:id="@+id/subTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:layout_marginTop="8dp"
            android:text="@string/kimironko_kigali"
            android:maxLines="1"
            android:textColor="@color/feminineEight"
            android:fontFamily="@font/open_sans_regular"
            android:id="@+id/subItemTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

    </LinearLayout>


</RelativeLayout >