<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_margin="@dimen/dimen_5"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/preview_card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:elevation="@dimen/dimen_5"
            android:layout_margin="@dimen/dimen_8"
            android:id="@+id/editImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_stock"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            app:tint="@color/colorPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/app_name"
                android:src="@drawable/placeholder"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_centerHorizontal="true"
            android:background="@color/colorWhite"
            android:id="@+id/linearLayout"
            android:layout_below="@id/constraintLayout"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans_bold"
                android:maxLines="1"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textSize="14sp"
                    android:maxEms="14"
                    android:fontFamily="@font/open_sans_semibold"
                    android:maxLines="1"
                    android:text="@string/rwf_100000"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/subTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:maxEms="14"
                    android:fontFamily="@font/open_sans_semibold"
                    android:maxLines="1"
                    android:text="@string/_2_qty"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/subItemTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:background="@color/colorPrimary"
            android:layout_below="@id/linearLayout"
            android:textAllCaps="false"
            android:text="@string/sell"
            android:textAlignment="center"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>