<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBusinessLocation">

    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="@color/toolbarTitle"
        android:background="@color/toolbarBackground"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="17sp"
            android:textColor="@color/toolbarTitle"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/add_brand_location"
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:padding="@dimen/dimen_16"
        android:background="@color/colorWhite"
        android:layout_marginTop="2dp"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_province"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/provinceTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_district"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/districtTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_sector"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/sectorTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_cell"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/cellTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_village"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/villageTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="@dimen/dimen_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/outline_location_on_24"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_street_address"
                android:textSize="18sp"
                android:textCursorDrawable="@color/colorBlack"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/addressTextInputEditText"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_chat_container"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_height="@dimen/dimen_60"/>

            <Button
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dimen_24"
                android:fontFamily="@font/open_sans_semibold"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/primary_background_button"
                android:text="@string/publish"
                android:textAlignment="center"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.wang.avi.AVLoadingIndicatorView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />

</RelativeLayout>