<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginEnd="@dimen/dimen_8"
    android:layout_marginStart="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/padding_8"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_alignParentStart="true"
            app:cardCornerRadius="@dimen/dimen_8"
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/dimen_110"
                    android:layout_height="@dimen/dimen_110"/>

                <TextView
                    android:elevation="5dp"
                    android:id="@+id/dateTextView"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/open_sans_semibold"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:text="23\nJan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_toEndOf="@id/cardView"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/order_2345"
                android:id="@+id/textView"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/app_name"
                android:layout_marginTop="5dp"
                android:id="@+id/subTextView"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="14sp"
                android:textColor="@color/feminineEight"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/rwf_100000"
                android:layout_marginTop="5dp"
                android:id="@+id/subItemTextView"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/monday_7_december_2022"
                android:layout_marginTop="5dp"
                android:id="@+id/timeTextView"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>